--- a/Sigo.Standard/Sigo.Standard.Api/appsettings.json
+++ b/Sigo.Standard/Sigo.Standard.Api/appsettings.json
@@ -1,7 +1,11 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;userid=root;Password=admin;database=SigoStandard;sslmode=none;persistsecurityinfo=True;"
-  },  
+  },
+  "BaseUrls":
+  {
+    "AuthApi": "https://localhost:5101/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
