--- a/Sigo.Standard/Sigo.Standard.Api/Dockerfile
+++ b/Sigo.Standard/Sigo.Standard.Api/Dockerfile
@@ -1,12 +1,11 @@
 ﻿#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1 AS base
-ARG apiProtocol=http
-ARG apiPort=80
-
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
+EXPOSE 80
+EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 COPY . "Sigo.Standard.Api/"
 WORKDIR "/src/Sigo.Standard.Api"
@@ -17,15 +16,6 @@ FROM build AS publish
 RUN dotnet publish "Sigo.Standard.Api.csproj" -c Release -o /app/publish
 
 FROM base AS final
-
-STOPSIGNAL SIGINT
-
 WORKDIR /app
 COPY --from=publish /app/publish .
-
-# Expose port for the Web API traffic
-ENV ASPNETCORE_URLS ${apiProtocol}://+:${apiPort}
-ENV ASPNETCORE_ENVIRONMENT=Production
-EXPOSE ${apiPort}
-
 ENTRYPOINT ["dotnet", "Sigo.Standard.Api.dll"]
