--- a/Sigo.Standard/Sigo.Standard.Api/appsettings.json
+++ b/Sigo.Standard/Sigo.Standard.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sigo-puc.mysql.database.azure.com;UserID = marcelo_marini;Password=Flamengo#Octa;Database=sigostandard;SslMode=Required"
+    "DefaultConnection": "server=localhost;port=3306;userid=root;Password=admin;database=SigoStandard;sslmode=none;persistsecurityinfo=True;"
   },
   "BaseUrls":
   {
