--- a/Sigo.Standard/Sigo.Standard.Api/appsettings.json
+++ b/Sigo.Standard/Sigo.Standard.Api/appsettings.json
@@ -1,10 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;userid=root;Password=admin;database=SigoStandard;sslmode=none;persistsecurityinfo=True;"
+    "DefaultConnection": "Server=sigo-puc.mysql.database.azure.com;UserID = marcelo_marini;Password=Flamengo#Octa;Database=sigostandard;SslMode=Required"
   },
-  "BaseUrls":
-  {
-    "AuthApi": "https://localhost:5101/"
+  "BaseUrls": {
+    "AuthApi": "http://sigo-tcc-marini-auth.azurewebsites.net"
   },
   "Logging": {
     "LogLevel": {
@@ -14,5 +13,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ASPNETCORE_ENVIRONMENT":"Development"
+  "ASPNETCORE_ENVIRONMENT": "Development"
 }
