--- a/Sigo.Standard/Sigo.Standard.Api/appsettings.json
+++ b/Sigo.Standard/Sigo.Standard.Api/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=sigo-puc.mysql.database.azure.com;UserID = marcelo_marini;Password=Flamengo#Octa;Database=sigostandard;SslMode=Required"
   },
   "BaseUrls": {
-    "AuthApi": "http://sigo-tcc-marini-auth.azurewebsites.net"
+    "AuthApi": "https://sigo-tcc-marini-auth.azurewebsites.net"
   },
   "Logging": {
     "LogLevel": {
