--- a/Sigo.Standard/Sigo.Standard.Api/appsettings.json
+++ b/Sigo.Standard/Sigo.Standard.Api/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sigo-puc.mysql.database.azure.com;UserID = marcelo_marini;Password=Flamengo#Octa;Database=sigostandard;SslMode=Required"
+    "DefaultConnection": "server=localhost;port=3306;userid=root;Password=admin;database=SigoStandard;sslmode=none;persistsecurityinfo=True;"
   },
   "BaseUrls": {
-    "AuthApi": "https://sigo-tcc-marini-auth.azurewebsites.net"
+    "AuthApi": "https://localhost:5101/"
   },
   "Logging": {
     "LogLevel": {
