--- a/Sigo.Standard/Sigo.Standard.Api/appsettings.json
+++ b/Sigo.Standard/Sigo.Standard.Api/appsettings.json
@@ -2,8 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;userid=root;Password=admin;database=SigoStandard;sslmode=none;persistsecurityinfo=True;"
   },
-  "BaseUrls":
-  {
+  "BaseUrls": {
     "AuthApi": "https://localhost:5101/"
   },
   "Logging": {
@@ -14,5 +13,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ASPNETCORE_ENVIRONMENT":"Development"
+  "ASPNETCORE_ENVIRONMENT": "Development"
 }
